--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "esbuild": "^0.14.53"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "dexie": "^3.2.2"
   }
 }
